# codeql-swift-artifacts

./: .swift-build-presets  CMakeLists.txt  CodeQLSwiftVersion.h.in  README.md  patch.sh  pkg_swift_llvm.py  swift-build-presets  swift-build-system.patch  swift_tag.txt
actions/release/: action.yml
patches/swift/: 01-remove-assert-in-fallthrough-stmt.patch  02-handle-empty-pattern-list.patch  03-reinstate-swiftinterface-compilation-for-resource-dir.patch  04-turn-on-interface-compilation-fallback-on-stdlib.patch  05-add-finished-to-frontend-observer.patch  06-remove-tests-from-cmake.patch  07-introduce-pluggable-frontend-observer.patch  08-avoid-opaque-identifier-pointers.patch  do-not-print-labels-in-function-type.patch  expose-swift-version.patch  extend-swift-observer.patch  fix-linux-compilation-with-swift-parser.patch
patches/swift-experimental-string-processing/: add-type-signature.patch
